--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,27 @@
-apply plugin: 'com.android.application'
+plugins {
+    id "com.android.application"
+}
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    namespace "com.example.helloworld"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.helloworld"
-        minSdkVersion 19
-        targetSdkVersion 19
+        minSdk 24
+        targetSdk 34
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            shrinkResources false
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-}
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion
