--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,11 @@ android {
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion
+        targetCompatibility JavaVersion.VERSION_17
+    }
+}
+
+dependencies {
+    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "androidx.core:core-ktx:1.13.1"
+}
