--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 # Project-wide Gradle settings.
 
-# Enable AndroidX (REQUIRED)
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# REQUIRED for modern AndroidX dependencies
 android.useAndroidX=true
 android.enableJetifier=true
-
-# JVM / encoding
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
