--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("com.android.application")
+    id "com.android.application"
 }
 
 android {
@@ -15,13 +15,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-        }
-        debug {
-            minifyEnabled false
         }
     }
 
@@ -31,6 +31,17 @@ android {
     }
 }
 
+/**
+ * FIX: Duplicate Kotlin classes (kotlin-stdlib vs kotlin-stdlib-jdk7/jdk8)
+ * Some AndroidX dependency graphs can pull both and Gradle fails with:
+ * :app:checkDebugDuplicateClasses
+ */
+configurations.configureEach {
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
+}
+
 dependencies {
     implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "com.google.android.material:material:1.12.0"
 }
